<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    android:padding="16dp"
    tools:context=".Dados_da_conta">

    <TextView
        android:id="@+id/DadosC"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:text="Dados do perfil"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="40dp"
        android:gravity="center" />

    <ImageView
        android:id="@+id/FotoLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/foto_logo"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DadosC" />

    <TextView
        android:id="@+id/emailCTV"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/emailA"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@id/FotoLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="270dp"
        />
    <EditText
        android:id="@+id/usuario"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@color/grey"
        android:backgroundTint="@color/grey"
        android:hint="@string/emial"
        android:textColor="@color/white"
        android:textColorHint="@color/light_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailCTV"/>
    <TextView
        android:id="@+id/nomeC"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/NomeC"
        android:textSize="20dp"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usuario"
        android:layout_marginRight="200dp"
        />
    <EditText
        android:id="@+id/nomeET"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:background="@color/grey"
        android:hint="João Ninguem"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeC" />

    <TextView
        android:id="@+id/mudarSenha"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="240dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/mudarSenha"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeET"
        tools:ignore="KeyboardInaccessibleWidget" />

    <TextView
        android:id="@+id/cancelarConta"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="84dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/cancelarConta"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@id/mudarSenha"
        app:layout_constraintLeft_toRightOf="@id/mudarSenha"
        app:layout_constraintTop_toBottomOf="@id/nomeET"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="KeyboardInaccessibleWidget" />

    <Button
        android:id="@+id/Salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/grey"
        android:text="@string/salvarMudanca"
        android:textSize="20dp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mudarSenha" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="@+id/cancelarConta"
        app:layout_constraintStart_toStartOf="@+id/mudarSenha"
        app:layout_constraintTop_toBottomOf="@+id/nomeET">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextDialogPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Digite sua senha atual"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>